Added Search and Previous Cities components to search for a city and then show them from local storage (redux-persist). Added utility function for weather reducer

--- a/src/components/weatherDetails/WeatherDetails.css
+++ b/src/components/weatherDetails/WeatherDetails.css
@@ -12,7 +12,8 @@
 
 .tableDiv {
     height: 50%;
-    font-weight: 900;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
 }
 
 table {
