--- a/src/App.css
+++ b/src/App.css
@@ -5,23 +5,22 @@ font-family: 'Roboto', sans-serif; */
 .container {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: 100vh;
     width: 100vw;
     background: url('./assets/backgroundImage.jpg') no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-    overflow: hidden;
+    /* overflow: auto; */
 }
 
 .left {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: left;
-    height: 80%;
-    width: 60%;
-    padding-left: 100px;
+    width: 100%;
+    height: 40%;
     color: white;
 }
 
@@ -29,8 +28,8 @@ font-family: 'Roboto', sans-serif; */
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
-    width: 40%;
+    width: 100%;
+    height: 60%;
     /* border: 1px solid red; */
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
@@ -41,9 +40,28 @@ font-family: 'Roboto', sans-serif; */
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 80%;
+    height: 100%;
 }
 
 .logo {
     width: 40px;
+}
+
+@media (min-width: 900px) {
+    .container {
+        flex-direction: row;
+    }
+    .left {
+        height: 80%;
+        width: 60%;
+        padding: 0;
+        padding-left: 100px;
+    }
+    .right {
+        height: 100%;
+        width: 40%;
+    }
+    .right__inner {
+        height: 80%;
+    }
 }
