--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -1,5 +1,6 @@
 .search {
     width: 100%;
+    /* margin: 0 15px; */
 }
 
 form {
@@ -8,7 +9,7 @@ form {
 
 .input {
     height: 100%;
-    width: calc(80% - 20px - 60px);
+    width: 70%;
     background: none;
     border: none;
     outline: none;
@@ -39,4 +40,10 @@ button img {
     margin: 0;
     padding: 30px;
     display: flex;
+}
+
+@media (min-width: 900px) {
+    .input {
+        width: calc(80% - 20px - 60px);
+    }
 }
