--- a/src/components/prevCities/PrevCities.css
+++ b/src/components/prevCities/PrevCities.css
@@ -15,9 +15,16 @@
     height: 20%;
     padding: 0;
     margin-left: auto;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.lengthTwo button {
+    margin-bottom: 20px;
+}
+
+.lengthMore {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    margin-top: 10px;
-    margin-bottom: 20px;
 }
