--- a/src/components/prevCities/PrevCities.css
+++ b/src/components/prevCities/PrevCities.css
@@ -15,8 +15,8 @@
     height: 20%;
     padding: 0;
     margin-left: auto;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 .lengthTwo button {
@@ -27,4 +27,10 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+}
+
+@media (min-width: 900px) {
+    .localContainer {
+        margin-top: 10px;
+    }
 }
