--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -1,6 +1,6 @@
 .search {
-    width: 100%;
-    /* margin: 0 15px; */
+    width: 90%;
+    margin-top: 20px;
 }
 
 form {
@@ -34,16 +34,23 @@ button {
 }
 
 button img {
-    width: 20px;
-    /* height: 40px; */
     background: #d46b05;
     margin: 0;
-    padding: 30px;
+    width: 10px;
+    padding: 15px;
     display: flex;
 }
 
 @media (min-width: 900px) {
+    .search {
+        width: 100%;
+        margin: 0;
+    }
     .input {
         width: calc(80% - 20px - 60px);
+    }
+    button img {
+        padding: 30px;
+        width: 20px;
     }
 }
