--- a/src/components/weatherDetails/WeatherDetails.css
+++ b/src/components/weatherDetails/WeatherDetails.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin-left: auto;
+    margin-bottom: 20px;
 }
 
 .tableDiv {
@@ -23,4 +24,10 @@ table {
     width: 100%;
     height: 100%;
     /* margin-left: 10%; */
+}
+
+@media (min-width: 900px) {
+    .weather__details {
+        margin-bottom: 0;
+    }
 }
