--- a/src/components/prevCities/PrevCities.css
+++ b/src/components/prevCities/PrevCities.css
@@ -11,12 +11,10 @@
 }
 
 .localContainer {
-    width: 90%;
+    width: 80%;
     height: 20%;
     padding: 0;
-    margin-left: auto;
-    margin-top: 20px;
-    margin-bottom: 30px;
+    margin: 20px auto 30px auto;
 }
 
 .lengthTwo button {
