--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -1,5 +1,6 @@
 .search {
     width: 90%;
+    margin: auto;
     margin-top: 20px;
 }
 
@@ -9,13 +10,13 @@ form {
 
 .input {
     height: 100%;
-    width: 70%;
+    width: 80%;
     background: none;
     border: none;
     outline: none;
     border-bottom: 1px solid white;
     font-family: 'Roboto', sans-serif;
-    margin-right: 10%;
+    margin-right: auto;
     margin-left: auto;
     margin-top: auto;
     color: white;
